Fix spacing issue for book cards in desktop view

--- a/style.css
+++ b/style.css
@@ -62,16 +62,17 @@ h1 {
   display: none;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .add-modal {
   z-index: 3;
   position: absolute;
-  width: 90%;
+  width: 80%;
   top: 25px;
   left: 50%;
   transform: translateX(-50%);
+  box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.8);
   background-color: rgb(0, 201, 60);
 }
 
@@ -79,14 +80,22 @@ h1 {
   position: absolute;
   right: 0;
   margin: 10px;
-  font-size: 24px;
   background-color: transparent;
+}
+
+.close-btn .material-icons {
+  font-size: 20px;
+  transition: transform 0.2s;
+}
+
+.close-btn:hover .material-icons {
+  transform: scale(1.5);
 }
 
 form {
   display: flex;
   flex-direction: column;
-  margin: 50px 0;
+  margin: 50px 0 20px;
   padding: 0 20px;
 }
 
@@ -245,6 +254,7 @@ label[for="sort-dropdown"] {
   padding: 10px;
   border: 4px solid red;
   border-radius: 15px;
+  overflow: hidden;
   background-color: rgb(255, 255, 0);
 }
 
@@ -272,7 +282,7 @@ label[for="sort-dropdown"] {
   justify-content: space-between;
   align-self: flex-end;
   width: 100%;
-  bottom: 10px;
+  bottom: -4px;
   left: 0;
   padding: 0 10px;
 }
@@ -303,13 +313,16 @@ label[for="sort-dropdown"] {
 }
 
 .book-status {
-  min-width: 105px;
-  height: 2rem;
+  min-width: 50%;
+  height: 2.5rem;
   padding: 0 10px;
-  font-size: 1.25rem;
+  font-size: 1rem;
   text-align: center;
+  font-weight: bold;
   border: 1px solid black;
-  border-radius: 15px;
+  border-bottom: 4px solid red;
+  border-start-end-radius: 15px;
+  border-start-start-radius: 15px;
   background-color: pink;
 }
 
@@ -406,5 +419,6 @@ a {
   .library-container {
     flex-direction: row;
     align-items: flex-start;
+    align-content: flex-start;
   }
 }
